repairing image spacing

--- a/src/components/images/images.scss
+++ b/src/components/images/images.scss
@@ -95,7 +95,3 @@
     display: block;
   }
 }
-
-.grower {
-  flex-grow: 1;
-}
